--- a/src/FAKESimple.Web/Views/Shared/_Layout.cshtml
+++ b/src/FAKESimple.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
 
     <script type="text/javascript">
         var appInsights=window.appInsights||function(config){
@@ -47,8 +46,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    <script src="dist/all.bundled.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
